# SpaceBattle

./: CMakeLists.txt  README.md
.github/workflows/: cmake_gtest.yml
src/Adapters/FuelAdapters/: BurnFuelAdapter.cpp  BurnFuelAdapter.h  CheckFuelAdapter.cpp  CheckFuelAdapter.h
src/Adapters/MoveAdapters/: ChangeVelocityAdapter.cpp  ChangeVelocityAdapter.h  MovableAdapter.cpp  RotableAdapter.cpp  RotableAdapter.h
src/Commands/BurnFuel/: BurnFuel.cpp  BurnFuel.h
src/Commands/ChangeVelocity/: ChangeVelocity.cpp  ChangeVelocity.h
src/Commands/CheckFuel/: CheckFuel.cpp  CheckFuel.h
src/Commands/LogException/: LogException.cpp  LogException.h
src/Commands/MacroCommand/: MacroCommand.cpp  MacroCommand.h
src/Commands/Move/: Move.cpp  Move.h
src/Commands/RepeatCommand/: RepeatCommand.cpp  RepeatCommand.h
src/Commands/Rotate/: Rotate.cpp  Rotate.h
src/Exceptions/: CommandException.h  ExceptionHandler.cpp  ExceptionHandler.h  FuelException.h
src/Interfaces/: ICommand.h  ICommandQueue.h  IException.h  IExceptionHandler.h  IFuelBurnable.h  IFuelCheckable.h  ILogger.h  IMovable.h  IRotable.h  IUObject.h  IVelocityChangeable.h
src/MovableAdapter/: MovableAdapter.h
src/Move/: Move.h
src/Rotate/: Rotate.h
src/Types/: Direction.cpp  Direction.h  Types.h
tests/: BurnFuelTest.cpp  CMakeLists.txt  ChangeVelocityTest.cpp  CheckFuelTest.cpp  ExceptionsTest.cpp  MacroCommandTest.cpp  MoveTest.cpp  RotateTest.cpp
tests/MockObjects/: MockObjects.h
